# orcalayer-mcp

./: .gitignore  README.md  glama.json  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
.smithery/: manifest.json
src/orcalayer_mcp/: __init__.py  __main__.py  server.py
