[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orcalayer-mcp"
version = "0.1.1"
description = "MCP server for the OrcaLayer API — Polymarket whale and market analytics for Claude Desktop and other MCP clients"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "OrcaLayer" }]
keywords = ["mcp", "model-context-protocol", "polymarket", "prediction-markets", "whales", "analytics", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.27,<2",
    "orcalayer>=0.1.3",
]

[project.scripts]
orcalayer-mcp = "orcalayer_mcp.server:main"

[project.urls]
Homepage = "https://orcalayer.com"
Documentation = "https://orcalayer.com/docs"
Repository = "https://github.com/orcalayer/orcalayer-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/orcalayer_mcp"]
